Added custom zoom button on macOS instead of maximize button

--- a/FramelessWindowImages.qrc
+++ b/FramelessWindowImages.qrc
@@ -4,5 +4,7 @@
         <file>images/icon_window_maximize.png</file>
         <file>images/icon_window_minimize.png</file>
         <file>images/icon_window_restore.png</file>
+        <file>images/icon_window_macOS_fullscreen.png</file>
+        <file>images/icon_window_macOS_maximize.png</file>
     </qresource>
 </RCC>
